<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:iconTint="@color/white"
        android:icon="@drawable/home"/>
    <item
        android:iconTint="@color/white"
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/search"
        android:icon="@drawable/icons8_search"/>

    <item
        android:iconTint="@color/white"
        android:id="@+id/cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/cart"
        android:icon="@drawable/cart"/>
    <item
        android:iconTint="@color/white"
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/profile"
        android:icon="@drawable/person"/>
</menu>