<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_3sdp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageSearch"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:background="@color/black"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/titleSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:ignore="VisualLintBounds" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/priceSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        tools:ignore="VisualLintBounds" />
                </LinearLayout>

                <TextView
                    android:id="@+id/descriptionSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descrption"
                    android:visibility="invisible"
                    tools:ignore="VisualLintBounds" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
