<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171942"
    tools:ignore="SpeakableTextPresentCheck">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse23"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splash"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="@+id/circleImageView"
        app:layout_constraintTop_toTopOf="@+id/circleImageView"
        app:layout_constraintVertical_bias="0.486" />

    <ImageButton
        android:id="@+id/button"
        style="@style/Theme.AppCompat.Light.NoActionBar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="262dp"
        android:layout_marginTop="730dp"
        android:background="@drawable/custom_input2"
        android:importantForAccessibility="no"
        android:outlineProvider="background"
        android:src="@drawable/arrow"
        android:text="@string/Continue"
        android:textColor="#FF5722"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/irish_grover"
        android:text="@string/craftzone"
        android:textColor="@color/white"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/irish_grover"
        android:text="@string/estd_1986"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/irish_grover"
        android:text="@string/shubham_sales"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.621" />
</androidx.constraintlayout.widget.ConstraintLayout>